# Cynor-agentOS

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  setup-claude-code.sh  setup-gemini-cli.sh  setup-gemini-code.sh  setup.sh
claude-code/agents/: governance-reviewer-agent.md  linter-agent.md  tester-agent.md
claude-code/user/: CLAUDE.md
examples/: CLAUDE-CODE-WORKFLOWS.md  GEMINI-WORKFLOWS.md  README.md
gemini-cli-project/: governance-report.md  hello.py  pyproject.toml
gemini-cli-project/gemini_cli/: main.py
gemini-cli-project/gemini_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
gemini-cli-project/gemini_cli/commands/: task.py
gemini-cli-project/tests/: test_hello.py
gemini-cli/agents/: cloud-config-generator.md  github-issue-manager.md  governance-agent.md
gemini-cli/commands/: analyze-product.toml  create-spec.toml  execute-tasks.toml  plan-product.toml
gemini-cli/user/: GEMINI.md
gemini-code/user/: GEMINI.md
instructions/: execute-tasks.md  plan-product.md
standards/: best-practices.md  tech-stack.md
