[project]
name = "gemini-cli"
version = "0.1.0"
description = "A CLI for interacting with Google Gemini, built with AgentOS principles."
authors = [{ name = "AgentOS & Gemini"}]
dependencies = [
    "typer>=0.12.3",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "pytest>=8.3.2",
]

[project.scripts]
gemini = "gemini_cli.main:app"
